src/main/java/com/amazon/opendistroforelasticsearch/sql/antlr/parser/OpenDistroSqlParser.java
// Generated from OpenDistroSqlParser.g4 by ANTLR 4.7.1
package com.amazon.opendistroforelasticsearch.sql.antlr.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OpenDistroSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPACE=1, SPEC_SQL_COMMENT=2, COMMENT_INPUT=3, LINE_COMMENT=4, ALL=5, AND=6, 
		AS=7, ASC=8, BETWEEN=9, BY=10, CASE=11, CROSS=12, DELETE=13, DESC=14, 
		DESCRIBE=15, DISTINCT=16, ELSE=17, EXISTS=18, FALSE=19, FROM=20, GROUP=21, 
		HAVING=22, IN=23, INNER=24, IS=25, JOIN=26, LEFT=27, LIKE=28, LIMIT=29, 
		MATCH=30, NATURAL=31, NOT=32, NULL_LITERAL=33, ON=34, OR=35, ORDER=36, 
		OUTER=37, REGEXP=38, RIGHT=39, SELECT=40, SHOW=41, THEN=42, TRUE=43, UNION=44, 
		USING=45, WHEN=46, WHERE=47, MISSING=48, EXCEPT=49, AVG=50, COUNT=51, 
		MAX=52, MIN=53, SUM=54, SUBSTRING=55, TRIM=56, YEAR=57, END=58, FULL=59, 
		OFFSET=60, TABLES=61, ABS=62, ACOS=63, ASIN=64, ATAN=65, ATAN2=66, CBRT=67, 
		CEIL=68, CONCAT=69, CONCAT_WS=70, COS=71, COSH=72, DATE_FORMAT=73, DEGREES=74, 
		E=75, EXP=76, EXPM1=77, FLOOR=78, LOG=79, LOG10=80, LOG2=81, LOWER=82, 
		PI=83, POW=84, RADIANS=85, RANDOM=86, RINT=87, ROUND=88, SIN=89, SINH=90, 
		SQRT=91, TAN=92, UPPER=93, D=94, T=95, TS=96, LEFT_BRACE=97, RIGHT_BRACE=98, 
		DATE_HISTOGRAM=99, DAY_OF_MONTH=100, DAY_OF_YEAR=101, DAY_OF_WEEK=102, 
		EXCLUDE=103, EXTENDED_STATS=104, FIELD=105, FILTER=106, GEO_BOUNDING_BOX=107, 
		GEO_DISTANCE=108, GEO_INTERSECTS=109, GEO_POLYGON=110, HISTOGRAM=111, 
		HOUR_OF_DAY=112, INCLUDE=113, IN_TERMS=114, MATCHPHRASE=115, MATCH_PHRASE=116, 
		MATCHQUERY=117, MATCH_QUERY=118, MINUTE_OF_DAY=119, MINUTE_OF_HOUR=120, 
		MONTH_OF_YEAR=121, MULTIMATCH=122, MULTI_MATCH=123, NESTED=124, PERCENTILES=125, 
		REGEXP_QUERY=126, REVERSE_NESTED=127, QUERY=128, RANGE=129, SCORE=130, 
		SECOND_OF_MINUTE=131, STATS=132, TERM=133, TERMS=134, TOPHITS=135, WEEK_OF_YEAR=136, 
		WILDCARDQUERY=137, WILDCARD_QUERY=138, STAR=139, DIVIDE=140, MODULE=141, 
		PLUS=142, MINUS=143, DIV=144, MOD=145, EQUAL_SYMBOL=146, GREATER_SYMBOL=147, 
		LESS_SYMBOL=148, EXCLAMATION_SYMBOL=149, BIT_NOT_OP=150, BIT_OR_OP=151, 
		BIT_AND_OP=152, BIT_XOR_OP=153, DOT=154, LR_BRACKET=155, RR_BRACKET=156, 
		COMMA=157, SEMI=158, AT_SIGN=159, ZERO_DECIMAL=160, ONE_DECIMAL=161, TWO_DECIMAL=162, 
		SINGLE_QUOTE_SYMB=163, DOUBLE_QUOTE_SYMB=164, REVERSE_QUOTE_SYMB=165, 
		COLON_SYMB=166, START_NATIONAL_STRING_LITERAL=167, STRING_LITERAL=168, 
		DECIMAL_LITERAL=169, HEXADECIMAL_LITERAL=170, REAL_LITERAL=171, NULL_SPEC_LITERAL=172, 
		BIT_STRING=173, DOT_ID=174, ID=175, REVERSE_QUOTE_ID=176, STRING_USER_NAME=177, 
		ERROR_RECONGNIGION=178, DATE=179, TIME=180, TIMESTAMP=181;
	public static final int
		RULE_root = 0, RULE_sqlStatement = 1, RULE_dmlStatement = 2, RULE_selectStatement = 3, 
		RULE_deleteStatement = 4, RULE_singleDeleteStatement = 5, RULE_orderByClause = 6, 
		RULE_orderByExpression = 7, RULE_tableSources = 8, RULE_tableSource = 9, 
		RULE_tableSourceItem = 10, RULE_joinPart = 11, RULE_queryExpression = 12, 
		RULE_querySpecification = 13, RULE_unionStatement = 14, RULE_minusStatement = 15, 
		RULE_selectSpec = 16, RULE_selectElements = 17, RULE_selectElement = 18, 
		RULE_fromClause = 19, RULE_groupByItem = 20, RULE_limitClause = 21, RULE_limitClauseAtom = 22, 
		RULE_administrationStatement = 23, RULE_showStatement = 24, RULE_utilityStatement = 25, 
		RULE_simpleDescribeStatement = 26, RULE_showFilter = 27, RULE_showSchemaEntity = 28, 
		RULE_fullId = 29, RULE_tableName = 30, RULE_fullColumnName = 31, RULE_uid = 32, 
		RULE_simpleId = 33, RULE_dottedId = 34, RULE_decimalLiteral = 35, RULE_stringLiteral = 36, 
		RULE_booleanLiteral = 37, RULE_nullNotnull = 38, RULE_constant = 39, RULE_uidList = 40, 
		RULE_expressions = 41, RULE_functionCall = 42, RULE_specificFunction = 43, 
		RULE_caseFuncAlternative = 44, RULE_aggregateWindowedFunction = 45, RULE_scalarFunctionName = 46, 
		RULE_functionArgs = 47, RULE_functionArg = 48, RULE_expression = 49, RULE_predicate = 50, 
		RULE_expressionAtom = 51, RULE_unaryOperator = 52, RULE_comparisonOperator = 53, 
		RULE_logicalOperator = 54, RULE_bitOperator = 55, RULE_mathOperator = 56, 
		RULE_keywordsCanBeId = 57, RULE_functionNameBase = 58, RULE_esFunctionNameBase = 59;
	public static final String[] ruleNames = {
		"root", "sqlStatement", "dmlStatement", "selectStatement", "deleteStatement", 
		"singleDeleteStatement", "orderByClause", "orderByExpression", "tableSources", 
		"tableSource", "tableSourceItem", "joinPart", "queryExpression", "querySpecification", 
		"unionStatement", "minusStatement", "selectSpec", "selectElements", "selectElement", 
		"fromClause", "groupByItem", "limitClause", "limitClauseAtom", "administrationStatement", 
		"showStatement", "utilityStatement", "simpleDescribeStatement", "showFilter", 
		"showSchemaEntity", "fullId", "tableName", "fullColumnName", "uid", "simpleId", 
		"dottedId", "decimalLiteral", "stringLiteral", "booleanLiteral", "nullNotnull", 
		"constant", "uidList", "expressions", "functionCall", "specificFunction", 
		"caseFuncAlternative", "aggregateWindowedFunction", "scalarFunctionName", 
		"functionArgs", "functionArg", "expression", "predicate", "expressionAtom", 
		"unaryOperator", "comparisonOperator", "logicalOperator", "bitOperator", 
		"mathOperator", "keywordsCanBeId", "functionNameBase", "esFunctionNameBase"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, "'ALL'", "'AND'", "'AS'", "'ASC'", "'BETWEEN'", 
		"'BY'", "'CASE'", "'CROSS'", "'DELETE'", "'DESC'", "'DESCRIBE'", "'DISTINCT'", 
		"'ELSE'", "'EXISTS'", "'FALSE'", "'FROM'", "'GROUP'", "'HAVING'", "'IN'", 
		"'INNER'", "'IS'", "'JOIN'", "'LEFT'", "'LIKE'", "'LIMIT'", "'MATCH'", 
		"'NATURAL'", "'NOT'", "'NULL'", "'ON'", "'OR'", "'ORDER'", "'OUTER'", 
		"'REGEXP'", "'RIGHT'", "'SELECT'", "'SHOW'", "'THEN'", "'TRUE'", "'UNION'", 
		"'USING'", "'WHEN'", "'WHERE'", "'MISSING'", "'MINUS'", "'AVG'", "'COUNT'", 
		"'MAX'", "'MIN'", "'SUM'", "'SUBSTRING'", "'TRIM'", "'YEAR'", "'END'", 
		"'FULL'", "'OFFSET'", "'TABLES'", "'ABS'", "'ACOS'", "'ASIN'", "'ATAN'", 
		"'ATAN2'", "'CBRT'", "'CEIL'", "'CONCAT'", "'CONCAT_WS'", "'COS'", "'COSH'", 
		"'DATE_FORMAT'", "'DEGREES'", "'E'", "'EXP'", "'EXPM1'", "'FLOOR'", "'LOG'", 
		"'LOG10'", "'LOG2'", "'LOWER'", "'PI'", "'POW'", "'RADIANS'", "'RANDOM'", 
		"'RINT'", "'ROUND'", "'SIN'", "'SINH'", "'SQRT'", "'TAN'", "'UPPER'", 
		"'D'", "'T'", "'TS'", "'{'", "'}'", "'DATE_HISTOGRAM'", "'DAY_OF_MONTH'", 
		"'DAY_OF_YEAR'", "'DAY_OF_WEEK'", "'EXCLUDE'", "'EXTENDED_STATS'", "'FIELD'", 
		"'FILTER'", "'GEO_BOUNDING_BOX'", "'GEO_DISTANCE'", "'GEO_INTERSECTS'", 
		"'GEO_POLYGON'", "'HISTOGRAM'", "'HOUR_OF_DAY'", "'INCLUDE'", "'IN_TERMS'", 
		"'MATCHPHRASE'", "'MATCH_PHRASE'", "'MATCHQUERY'", "'MATCH_QUERY'", "'MINUTE_OF_DAY'", 
		"'MINUTE_OF_HOUR'", "'MONTH_OF_YEAR'", "'MULTIMATCH'", "'MULTI_MATCH'", 
		"'NESTED'", "'PERCENTILES'", "'REGEXP_QUERY'", "'REVERSE_NESTED'", "'QUERY'", 
		"'RANGE'", "'SCORE'", "'SECOND_OF_MINUTE'", "'STATS'", "'TERM'", "'TERMS'", 
		"'TOPHITS'", "'WEEK_OF_YEAR'", "'WILDCARDQUERY'", "'WILDCARD_QUERY'", 
		"'*'", "'/'", "'%'", "'+'", "'-'", "'DIV'", "'MOD'", "'='", "'>'", "'<'", 
		"'!'", "'~'", "'|'", "'&'", "'^'", "'.'", "'('", "')'", "','", "';'", 
		"'@'", "'0'", "'1'", "'2'", "'''", "'\"'", "'`'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SPACE", "SPEC_SQL_COMMENT", "COMMENT_INPUT", "LINE_COMMENT", "ALL", 
		"AND", "AS", "ASC", "BETWEEN", "BY", "CASE", "CROSS", "DELETE", "DESC", 
		"DESCRIBE", "DISTINCT", "ELSE", "EXISTS", "FALSE", "FROM", "GROUP", "HAVING", 
		"IN", "INNER", "IS", "JOIN", "LEFT", "LIKE", "LIMIT", "MATCH", "NATURAL", 
		"NOT", "NULL_LITERAL", "ON", "OR", "ORDER", "OUTER", "REGEXP", "RIGHT", 
		"SELECT", "SHOW", "THEN", "TRUE", "UNION", "USING", "WHEN", "WHERE", "MISSING", 
		"EXCEPT", "AVG", "COUNT", "MAX", "MIN", "SUM", "SUBSTRING", "TRIM", "YEAR", 
		"END", "FULL", "OFFSET", "TABLES", "ABS", "ACOS", "ASIN", "ATAN", "ATAN2", 
		"CBRT", "CEIL", "CONCAT", "CONCAT_WS", "COS", "COSH", "DATE_FORMAT", "DEGREES", 
		"E", "EXP", "EXPM1", "FLOOR", "LOG", "LOG10", "LOG2", "LOWER", "PI", "POW", 
		"RADIANS", "RANDOM", "RINT", "ROUND", "SIN", "SINH", "SQRT", "TAN", "UPPER", 
		"D", "T", "TS", "LEFT_BRACE", "RIGHT_BRACE", "DATE_HISTOGRAM", "DAY_OF_MONTH", 
		"DAY_OF_YEAR", "DAY_OF_WEEK", "EXCLUDE", "EXTENDED_STATS", "FIELD", "FILTER", 
		"GEO_BOUNDING_BOX", "GEO_DISTANCE", "GEO_INTERSECTS", "GEO_POLYGON", "HISTOGRAM", 
		"HOUR_OF_DAY", "INCLUDE", "IN_TERMS", "MATCHPHRASE", "MATCH_PHRASE", "MATCHQUERY", 
		"MATCH_QUERY", "MINUTE_OF_DAY", "MINUTE_OF_HOUR", "MONTH_OF_YEAR", "MULTIMATCH", 
		"MULTI_MATCH", "NESTED", "PERCENTILES", "REGEXP_QUERY", "REVERSE_NESTED", 
		"QUERY", "RANGE", "SCORE", "SECOND_OF_MINUTE", "STATS", "TERM", "TERMS", 
		"TOPHITS", "WEEK_OF_YEAR", "WILDCARDQUERY", "WILDCARD_QUERY", "STAR", 
		"DIVIDE", "MODULE", "PLUS", "MINUS", "DIV", "MOD", "EQUAL_SYMBOL", "GREATER_SYMBOL", 
		"LESS_SYMBOL", "EXCLAMATION_SYMBOL", "BIT_NOT_OP", "BIT_OR_OP", "BIT_AND_OP", 
		"BIT_XOR_OP", "DOT", "LR_BRACKET", "RR_BRACKET", "COMMA", "SEMI", "AT_SIGN", 
		"ZERO_DECIMAL", "ONE_DECIMAL", "TWO_DECIMAL", "SINGLE_QUOTE_SYMB", "DOUBLE_QUOTE_SYMB", 
		"REVERSE_QUOTE_SYMB", "COLON_SYMB", "START_NATIONAL_STRING_LITERAL", "STRING_LITERAL", 
		"DECIMAL_LITERAL", "HEXADECIMAL_LITERAL", "REAL_LITERAL", "NULL_SPEC_LITERAL", 
		"BIT_STRING", "DOT_ID", "ID", "REVERSE_QUOTE_ID", "STRING_USER_NAME", 
		"ERROR_RECONGNIGION", "DATE", "TIME", "TIMESTAMP"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OpenDistroSqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OpenDistroSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(OpenDistroSqlParser.EOF, 0); }
		public SqlStatementContext sqlStatement() {
			return getRuleContext(SqlStatementContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenDistroSqlParserListener ) ((OpenDistroSqlParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenDistroSqlParserListener ) ((OpenDistroSqlParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OpenDistroSqlParserVisitor ) return ((OpenDistroSqlParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DELETE) | (1L << DESCRIBE) | (1L << SELECT) | (1L << SHOW))) != 0) || _la==LR_BRACKET) {
				{
				setState(120);
				sqlStatement();
				}
			}

			setState(123);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqlStatementContext extends ParserRuleContext {
		public DmlStatementContext dmlStatement() {
			return getRuleContext(DmlStatementContext.class,0);
		}
		public AdministrationStatementContext administrationStatement() {
			return getRuleContext(AdministrationStatementContext.class,0);
		}
		public UtilityStatementContext utilityStatement() {
			return getRuleContext(UtilityStatementContext.class,0);
		}
		public SqlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenDistroSqlParserListener ) ((OpenDistroSqlParserListener)listener).enterSqlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenDistroSqlParserListener ) ((OpenDistroSqlParserListener)listener).exitSqlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OpenDistroSqlParserVisitor ) return ((OpenDistroSqlParserVisitor<? extends T>)visitor).visitSqlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementContext sqlStatement() throws RecognitionException {
		SqlStatementContext _localctx = new SqlStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqlStatement);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DELETE:
			case SELECT:
			case LR_BRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				dmlStatement();
				}
				break;
			case SHOW:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				administrationStatement();
				}
				break;
			case DESCRIBE:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				utilityStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DmlStatementContext extends ParserRuleContext {
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public DmlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenDistroSqlParserListener ) ((OpenDistroSqlParserListener)listener).enterDmlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenDistroSqlParserListener ) ((OpenDistroSqlParserListener)listener).exitDmlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OpenDistroSqlParserVisitor ) return ((OpenDistroSqlParserVisitor<? extends T>)visitor).visitDmlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DmlStatementContext dmlStatement() throws RecognitionException {
		DmlStatementContext _localctx = new DmlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dmlStatement);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECT:
			case LR_BRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				selectStatement();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				deleteStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
